# libopencm3

./: .gitignore  crossfile.txt  meson.build
lib/cm3/: meson.build
lib/stm32/: meson.build
lib/stm32/f1/: meson.build
lib/usb/: meson.build
meson/: buildmeson.sh  genirqfiles.sh  setupmeson.sh
