stm32f1_common_src = files(
    'can.c',
    'desig.c',
    'st_usbfs_v1.c',
    #'st_usbfs_v2.c',
    'common/adc_common_v1.c',
    #'common/adc_common_v2.c',
    #'common/adc_common_v2_multi.c',
    'common/crc_common_all.c',
    #'common/crs_common_all.c',
    #'common/crypto_common_f24.c',
    'common/dac_common_all.c',
    #'common/dma_common_f24.c',
    'common/dma_common_l1f013.c',
    #'common/exti_common_all.c',
    'common/flash_common_f01.c',
    # 'common/flash_common_f234.c',
    # 'common/flash_common_f24.c',
    # 'common/flash_common_l01.c',
    'common/gpio_common_all.c',
    #'common/gpio_common_f0234.c',
    #'common/hash_common_f24.c',
    'common/i2c_common_v1.c',
    #'common/i2c_common_v2.c',
    'common/iwdg_common_all.c',
    'common/pwr_common_v1.c',
    #'common/pwr_common_v2.c',
    'common/rcc_common_all.c',
    #'common/rng_common_v1.c',
    #'common/rtc_common_l1f024.c',
    'common/spi_common_all.c',
    #'common/spi_common_f03.c',
    'common/spi_common_l1f124.c',
    'common/st_usbfs_core.c',
    'common/timer_common_all.c',
    #'common/timer_common_f0234.c',
    #'common/timer_common_f24.c',
    'common/usart_common_all.c',
    'common/usart_common_f124.c',
    #'common/usart_common_v2.c',
)